--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MohamadAmin Gharibi</title>
+    <title>Home | MohamadAmin Gharibi</title>
     <link rel="stylesheet" href="./style/style.css">
     <script type="text/javascript">
 		if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -477,6 +477,7 @@
     </div>
 </footer>
 
+<script src="scripts/shared.js" type="module"></script>
 <script src="scripts/app.js" type="module"></script>
 </body>
 </html>
